add name input and label. size=20 currently not working

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Track Suggester</title>
   </head>
   <body>
-    
+    <div class="container">
+      <h1>What Track Should You Take? Find Out!</h1>
+      <form id="name">
+        <div class="form-group">
+          <label for="name">Enter your name here.</label>
+          <input id="name" size="20" class="form-control" type="text" placeholder="Name Here">
+          <label for="experience">What is your current experience with programming?</label>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
