--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
       <form id="survey">
         <div class="form-group">
           <label for="name">Enter your name here.</label>
-          <input id="name" size="20" class="form-control" type="text" placeholder="Name Here">
+          <input id="name" size="20" class="form-control" type="text" placeholder="Name Here" required>
+        </div>
+        <h4>Address</h4>
+        <div class="form-group">
+          <label for="street">Street</label>
+          <input id="street" size="20" class="form-control" type="text" placeholder="Optional">
+        </div>
+        <div class="form-group">
+          <label for="city">City</label>
+          <input id="city" size="20" class="form-control" type="text" placeholder="Optional">
+        </div>
+        <div class="form-group">
+          <label for="state">State</label>
+          <input id="state" size="20" class="form-control" type="text" placeholder="Optional">
+        </div>
+        <div class="form-group">
+          <label for="zip">Zip Code</label>
+          <input id="zip" size="20" class="form-control" type="text" placeholder="Optional">
         </div>
         <div class="radio">
           <h3>What is your current level of experience with programing?</h3>
