add button on html. add document ready function in scripts.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <option>Mobile Game Development</option>
           <option>Web Styling</option>
         </select>
+        <button type="submit" class="btn btn-success">Submit</button>
       </form>
     </div>
   </body>
