--- a/index.html
+++ b/index.html
@@ -54,15 +54,17 @@
             <input type="radio" name="experience" value="none" checked>I've had lots of experience. Looking to further my portfolio.
           </label>
         </div>
-        <label for="interest">What interests you most: select one from the drop down menu:</label>
-        <select class="form-control" id="interest">
-          <option>Select One</option>
-          <option>Web Development</option>
-          <option>PC Aplications</option>
-          <option>Mobile Game Development</option>
-          <option>Web Styling</option>
-        </select>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <div>
+          <label for="interest">What interests you most: select one from the drop down menu:</label>
+          <select class="form-control" id="interest">
+            <option>Select One</option>
+            <option>Web Development</option>
+            <option>PC Aplications</option>
+            <option>Mobile Game Development</option>
+            <option>Web Styling</option>
+          </select>
+        </div>
+      <button type="submit" class="btn btn-success">Submit</button>
       </form>
     </div>
   </body>
