--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <form id="survey">
         <div class="form-group">
           <label for="name">Enter your name here.</label>
-          <input id="name" size="20" class="form-control" type="text" placeholder="Name Here" required>
+          <input id="name" size="20" class="form-control" type="text" placeholder="Name Here">
         </div>
         <h4>Address</h4>
         <div class="form-group">
@@ -66,6 +66,7 @@
         </div>
       <button type="submit" class="btn btn-success">Submit</button>
       </form>
+      <button id="showSurvey" type="click" class="btn btn-info">Show Survey</button>
     </div>
   </body>
 </html>
