--- a/index.html
+++ b/index.html
@@ -11,61 +11,63 @@
   <body>
     <div class="container">
       <h1 style="text-align:center;">What Track Should You Take? Find Out!</h1>
-      <form id="survey">
-        <div class="form-group">
-          <label for="name">Enter your name here.</label>
-          <input id="name" size="20" class="form-control" type="text" placeholder="Name Here">
-        </div>
-        <h4>Address</h4>
-        <div class="form-group">
-          <label for="street">Street</label>
-          <input id="street" size="20" class="form-control" type="text" placeholder="Optional">
-        </div>
-        <div class="form-group">
-          <label for="city">City</label>
-          <input id="city" size="20" class="form-control" type="text" placeholder="Optional">
-        </div>
-        <div class="form-group">
-          <label for="state">State</label>
-          <input id="state" size="20" class="form-control" type="text" placeholder="Optional">
-        </div>
-        <div class="form-group">
-          <label for="zip">Zip Code</label>
-          <input id="zip" size="20" class="form-control" type="text" placeholder="Optional">
-        </div>
-        <div class="radio">
-          <h3>What is your current level of experience with programing?</h3>
-          <label>
-            <input type="radio" name="experience" value="none" checked>Brand new!
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="experience" value="none" checked>I have a little expereince with programming.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="experience" value="none" checked>I've been programming for a while.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="experience" value="none" checked>I've had lots of experience. Looking to further my portfolio.
-          </label>
-        </div>
-        <div>
-          <label for="interest">What interests you most: select one from the drop down menu:</label>
-          <select class="form-control" id="interest">
-            <option>Select One</option>
-            <option>Web Development</option>
-            <option>PC Aplications</option>
-            <option>Mobile Game Development</option>
-            <option>Web Styling</option>
-          </select>
-        </div>
-      <button type="submit" class="btn btn-success">Submit</button>
-      </form>
+      <div class="jumbotron">
+        <form id="survey">
+          <div class="form-group">
+            <label for="name">Enter your name here.</label>
+            <input id="name" size="20" class="form-control" type="text" placeholder="Name Here">
+          </div>
+          <h4>Address</h4>
+          <div class="form-group">
+            <label for="street">Street</label>
+            <input id="street" size="20" class="form-control" type="text" placeholder="Optional">
+          </div>
+          <div class="form-group">
+            <label for="city">City</label>
+            <input id="city" size="20" class="form-control" type="text" placeholder="Optional">
+          </div>
+          <div class="form-group">
+            <label for="state">State</label>
+            <input id="state" size="20" class="form-control" type="text" placeholder="Optional">
+          </div>
+          <div class="form-group">
+            <label for="zip">Zip Code</label>
+            <input id="zip" size="20" class="form-control" type="text" placeholder="Optional">
+          </div>
+          <div class="radio">
+            <h3>What is your current level of experience with programing?</h3>
+            <label>
+              <input type="radio" name="experience" value="none" checked>Brand new!
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="experience" value="none" checked>I have a little expereince with programming.
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="experience" value="none" checked>I've been programming for a while.
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="experience" value="none" checked>I've had lots of experience. Looking to further my portfolio.
+            </label>
+          </div>
+          <div>
+            <label for="interest">What interests you most: select one from the drop down menu:</label>
+            <select class="form-control" id="interest">
+              <option>Select One</option>
+              <option>Web Development</option>
+              <option>PC Aplications</option>
+              <option>Mobile Game Development</option>
+              <option>Web Styling</option>
+            </select>
+          </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+      </div>
       <button id="showSurvey" type="click" class="btn btn-info">Show Survey</button>
     </div>
   </body>
