working on if else statments for radio buttons. nothing is working at the moment'

--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
           <div class="radio">
             <h3>What is your current level of experience with programing?</h3>
             <label>
-              <input type="radio" name="experience" value="new" checked>Brand new!
+              <input type="radio" name="experience" value="1" id="new" checked>Brand new!
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="experience" value="little" checked>I have a little expereince with programming.
+              <input type="radio" name="experience" value="2" id="little" checked>I have a little expereince with programming.
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="experience" value="intermediate" checked>I've been programming for a while.
+              <input type="radio" name="experience" value="3" id="intermediate" checked>I've been programming for a while.
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="experience" value="expert" checked>I've had lots of experience. Looking to further my portfolio.
+              <input type="radio" name="experience" value="4" id="advance" checked>I've had lots of experience. Looking to further my portfolio.
             </label>
           </div>
           <div>
