--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form id="survey">
           <div class="form-group">
             <label for="name">Enter your name here.</label>
-            <input id="name" size="20" class="form-control" type="text" placeholder="Name Here">
+            <input id="name" class="form-control" type="text" placeholder="Name Here">
           </div>
           <h4>Address</h4>
           <div class="form-group">
@@ -70,7 +70,7 @@
       </div>
       <button id="showSurvey" type="click" class="btn btn-info">Show Survey</button>
       <div id="introToProgram">
-        <h3>Base on the information you gave me <span class="name">. I recommend the intro to programming course at <a href="https://www.epicodus.com">Epicodus</a>:</span></h3>
+        <h3>Base on the information you gave me <span class="nameEnter"></span>. I recommend the intro to programming course at <a href="https://www.epicodus.com">Epicodus</a>:</h3>
     </div>
   </body>
 </html>
