finish all experience responses

--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@
       </div>
       <button id="showSurvey" type="click" class="btn btn-info">Show Survey</button>
       <div id="introToProgram">
-        <h3>Base on the information you gave me <span class="nameEnter"></span>. I recommend the intro to programming course at <a href="https://www.epicodus.com">Epicodus</a>:</h3>
+        <h3>Based on the information you gave me <span class="nameEnter"></span>. I recommend the intro to programming course at <a href="https://www.epicodus.com">Epicodus</a>. This is a amazing place to start if you have never programmed before!</h3>
+      </div>
+      <div id="littleExperience">
+        <h3>Based on the information you gave me <span class="nameEnter"></span>. I recommend CSS/Design class offered by <a href="https://www.epicodus.com">Epicodus</a>. So you can learn more about styling webpages and really focus on the front end development.</h3>
+      </div>
+      <div id="intermediateExperience">
+        <h3>Based on the information you gave me <span class="nameEnter"></span>. I recommend you take the PHP/Drupal course offered <a href="https://www.epicodus.com">Epicodus</a>. Drupal is free, open source software that can be used by individuals or groups of users -- even those lacking technical skills -- to easily create and manage many types of Web sites. The application includes a content management platform and a development framework.</h3>
+      </div>
+      <div id="advanceExperience">
+        <h3>Based on the information you gave me <span class="nameEnter"></span>. I recommend the Ruby/Rails program offered by <a href="https://www.epicodus.com">Epicodus</a>. Ruby on Rails, or Rails, is a server-side web application framework written in Ruby under the MIT License. Rails is a model–view–controller (MVC) framework, providing default structures for a database, a web service, and web pages.</h3>
+      </div>
     </div>
   </body>
 </html>
