tried to add more else if for multiple options. ran out of time

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <label for="interest">What interests you most: select one from the drop down menu:</label>
             <select class="form-control" id="interest">
               <option>Select One</option>
-              <option>Web Development</option>
-              <option>PC Aplications</option>
-              <option>Mobile Game Development</option>
-              <option>Web Styling</option>
+              <option value="1">Web Development</option>
+              <option value="2">PC Aplications</option>
+              <option value="3">Mobile Game Development</option>
+              <option value="4">Web Styling</option>
             </select>
           </div>
         <button type="submit" class="btn btn-success">Submit</button>
